RESOLVED FIXED231951
[css-writing-modes] Fix sizing of orthogonal elements with percentage margins
https://bugs.webkit.org/show_bug.cgi?id=231951
Summary [css-writing-modes] Fix sizing of orthogonal elements with percentage margins
zsun
Reported 2021-10-19 07:03:43 PDT
Fix sizing of orthogonal elements with percentage margins.
Attachments
Patch (5.04 KB, patch)
2021-10-19 07:26 PDT, zsun
no flags
Patch (5.07 KB, patch)
2021-10-22 04:11 PDT, zsun
no flags
zsun
Comment 1 2021-10-19 07:26:39 PDT
Manuel Rego Casasnovas
Comment 2 2021-10-22 01:37:53 PDT
Comment on attachment 441721 [details] Patch r=me
EWS
Comment 3 2021-10-22 01:40:01 PDT
Tools/Scripts/svn-apply failed to apply attachment 441721 [details] to trunk. Please resolve the conflicts and upload a new patch.
zsun
Comment 4 2021-10-22 04:11:50 PDT
EWS
Comment 5 2021-10-25 01:35:30 PDT
Committed r284773 (243482@main): <https://commits.webkit.org/243482@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 442149 [details].
Radar WebKit Bug Importer
Comment 6 2021-10-25 01:36:18 PDT
Note You need to log in before you can comment on or make changes to this bug.