[css-writing-modes] Fix sizing of orthogonal elements with percentage margins https://bugs.webkit.org/show_bug.cgi?id=231951

Reviewed by Manuel Rego Casasnovas.
Source/WebCore:

This is to modify RenderBox::FillAvailableMeasure() to handle the case of
orthogonal elements when computing the margins. Spec reference is at
https://www.w3.org/TR/css-writing-modes-3/#dimension-mapping

The change is an import of Chromium CL at
https://chromium-review.googlesource.com/c/chromium/src/+/968522/

* rendering/RenderBox.cpp:
(WebCore::RenderBox::fillAvailableMeasure const):

LayoutTests:

* TestExpectations: Unskipped 8 tests that are now passing.


Canonical link: https://commits.webkit.org/243482@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284773 268f45cc-cd09-0410-ab3c-d52691b4dbfc